--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/news_admin_new.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/news_admin_new.html.twig
@@ -204,6 +204,7 @@
                         linkButton: true,
                         editorId: 'newsText',
                         ref: 'r_text',
+                        boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
                         boilerPlate: 'news.notes'
                     },
                     id: 'r_text',
