--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
@@ -96,6 +96,7 @@
                         label: { text: 'email.body'|trans },
                         control: {
                             value: templateVars.emailText|default,
+                            boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
                             boilerPlate: 'email',
                             toolbarItems: { headings: [1,2,3] },
                             hiddenInput: 'r_emailText',
