--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
@@ -38,6 +38,7 @@
                         label: { text: 'email.body'|trans },
                         control: {
                             name: 'r_email_body',
+                            boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
                             boilerPlate: 'email',
                             headings: [1,2,3],
                             hiddenInput: 'r_email_body',
