--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
@@ -43,6 +43,7 @@
                     label: { text: 'email.body'|trans },
                     control: {
                         name: 'r_email_body',
+                        boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
                         boilerPlate: 'email',
                         toolbarItems: { headings: [1,2,3] },
                         hiddenInput: 'r_email_body',
