--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
@@ -14,6 +14,8 @@
         {% endif %}
     {% endif %}
 
+    {% block hint %} {% endblock %}
+
     {% set procedureTypes = templateVars.procedureTypes|map(el => { name: el.name, id: el.id, description: el.description }) %}
 
     <dp-new-procedure
