chore (refs T31116): revert all the changes for DpDashboardTaskCard.
- we should move the component to demosplan-core and give it a more specific name.

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_dashboard.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_dashboard.html.twig
@@ -64,12 +64,7 @@
                     {# show segments assigned to current user #}
                     <dp-dashboard-task-card
                         current-user-id="{{ currentUser.id }}"
-                        procedure-id="{{ procedure }}"
-                        :routes="{
-                            filterHashUpdatedRoute: 'dplan_rpc_segment_list_query_update',
-                            resourceListRoute: Routing.generate('api_resource_list', { resourceType: 'StatementSegment' }),
-                            userFilteredRoute: Routing.generate('dplan_segments_list', { procedureId: {{ procedure.id }} })
-                        }">
+                        procedure-id="{{ procedure }}">
                     </dp-dashboard-task-card>
 
                     {# show currently segmentable statements #}
