fix(T31192): add aria-label to the table tag with a new translation key 'misc.softwarecomponents.table'

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanStatic/components_entry.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanStatic/components_entry.html.twig
@@ -1,4 +1,6 @@
-<table class="c-table u-mv">
+<table
+    class="c-table u-mv"
+    aria-label="{{ 'misc.softwarecomponents.table'|trans }}">
     <thead>
         <tr>
             <th>Komponente</th>
