fix(refs:T25931): Add strikethrough and remove insertAndDelete

--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
@@ -25,9 +25,9 @@
                                     hidden-input="r_text"
                                     procedure-id="{{ templateVars.table.procedure.ident }}"
                                     :toolbar-items="{
-                                        insertAndDelete: true,
+                                        mark: true,
                                         obscure: hasPermission('feature_obscure_text'),
-                                        mark: true
+                                        strikethrough: true
                                     }"
                                     :value="JSON.parse('{{ statement.text|json_encode|e('js') }}')">
                                 </dp-editor>
