chore (refs T31116): add separate props to parent prop (routes).

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/news_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/news_admin_edit.html.twig
@@ -247,7 +247,9 @@
                         linkButton: true,
                         editorId: 'newsText',
                         ref: 'r_text',
-                        boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
+                        routes: {
+                            boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedure })
+                        },
                         boilerPlate: 'news.notes'
                     },
                     id: 'r_text',
