--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
@@ -43,12 +43,14 @@
                     label: { text: 'email.body'|trans },
                     control: {
                         name: 'r_email_body',
-                        boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
                         boilerPlate: 'email',
                         toolbarItems: { headings: [1,2,3] },
                         hiddenInput: 'r_email_body',
                         linkButton: true,
-                        procedureId: templateVars.procedureId
+                        procedureId: templateVars.procedureId,
+                        routes: {
+                            boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': templateVars.procedureId })
+                        }
                     },
                     id: 'r_email_body',
                     type: 'editor',
