--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
@@ -105,10 +105,12 @@
                                 :entity-id="JSON.parse('{{ statement.id|json_encode|e('js') }}')"
                                 hidden-input="r_recommendation"
                                 procedure-id="{{ templateVars.table.procedure.ident }}"
-                                :boilerplate-list-route="Routing.generate('DemosPlan_procedure_boilerplate_list', { procedure: {{ templateVars.table.procedure.ident }} })"
                                 :toolbar-items="{
                                     boilerPlate: 'consideration',
                                     linkButton: true
+                                }"
+                                :routes="{
+                                    boilerplateListRoute: Routing.generate('DemosPlan_procedure_boilerplate_list', { procedure: {{ templateVars.table.procedure.ident }} })
                                 }"
                                 v-model="currentRecommendation">
                             </dp-editor>
