--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
@@ -116,13 +116,15 @@
                     label: { text: 'email.body'|trans },
                     control: {
                         value: templateVars.procedure.settings.emailText|default,
-                        boilerplateListRoute: 'DemosPlan_procedure_boilerplate_list',
                         boilerPlate: 'email',
                         toolbarItems: { headings: [1, 2, 3] },
                         hiddenInput: 'r_emailText',
                         linkButton: true,
                         procedureId: procedureId,
-                        ref: 'r_emailText'
+                        ref: 'r_emailText',
+                        routes: {
+                            boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId })
+                        }
                     },
                     type: 'editor',
                     id: 'r_emailText',
