feat addons : add pdf status chart to overview
- This is part of the dashboard overview addon which is related to the pdf import center
- This is a poc how to load a component dynamically and how to pass props to an addon dymamically

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_dashboard.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_dashboard.html.twig
@@ -324,6 +324,13 @@
                     <procedure-analytics-chart procedure-id="{{ procedure }}">
                     </procedure-analytics-chart>
                 {% endif %}
+
+                <addon-wrapper
+                    hook-name="dashboard.views"
+                    :addon-props="{
+                        'procedureId': '{{ procedure }}'
+                    }">
+                </addon-wrapper>
             </div>
         </div>
     {% endapply %}
