chore (refs T31116): minor improvements JS code, add provide inject function.
- Add file hash for upload file in demosplan-ui.

--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
@@ -2,7 +2,10 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-zip-video"
-        file-route="core_file"
+        :file-route="{
+            router: Routing.generate,
+            path: 'core_file'
+        }"
         :label="{
           hint: Translator.trans('file.upload.pdf.zip.mp4'),
           text: Translator.trans('file')
@@ -18,7 +21,10 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-video"
-        file-route="core_file"
+        :file-route="{
+            router: Routing.generate,
+            path: 'core_file'
+        }"
         :label="{
           hint: Translator.trans('file.upload.pdf.mp4'),
           text: Translator.trans('file')
