chore (refs T31116): rename prop for upload file & minor improvements JS.

--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
@@ -2,9 +2,8 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-zip-video"
-        :file-route="{
-            router: Routing.generate,
-            path: 'core_file'
+        :get-file-by-hash="(hash) => {
+           return Routing.generate('core_file', { hash: hash })
         }"
         :label="{
           hint: Translator.trans('file.upload.pdf.zip.mp4'),
@@ -21,9 +20,8 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-video"
-        :file-route="{
-            router: Routing.generate,
-            path: 'core_file'
+        :get-file-by-hash="(hash) => {
+           return Routing.generate('core_file', { hash: hash })
         }"
         :label="{
           hint: Translator.trans('file.upload.pdf.mp4'),
