--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_edit.html.twig
@@ -79,7 +79,7 @@
                 table: true
             }"
             :routes="{
-              fileRoute: Routing.generate('core_file')
+              getFileByHash: (hash) => Routing.generate('core_file', { hash: hash })
             }"
             procedure-id="{{ procedure }}"
             :required="true">
