feat(refs T30254): Move introduction text to core
It is useful in all projects.

Ado1740

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
@@ -14,7 +14,7 @@
         {% endif %}
     {% endif %}
 
-    {% block hint %} {% endblock %}
+    <p class="u-mb">{{ "text.procedure.new"|trans }}</p>
 
     {% set procedureTypes = templateVars.procedureTypes|map(el => { name: el.name, id: el.id, description: el.description }) %}
 
