fix(refs T25762): add spacing to button row

--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanAssessment/cluster_detail.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanAssessment/cluster_detail.html.twig
@@ -189,7 +189,7 @@
 
                 {# button row #}
                 {% if not readonly %}
-                    <div class="text--right">
+                    <div class="text--right space-inline-s u-pv-0_5 bg-color--white">
                         <input class="btn btn--primary u-pr-0_5-desk-down u-pl-0_5-desk-down" type="submit" name="submit_item_button" value="{{ "save"|trans }}">
                         <input class="btn btn--primary u-pr-0_5-desk-down u-pl-0_5-desk-down" type="submit" name="submit_item_return_button" v-save-and-return value="{{ "save.and.return.to.list"|trans }}">
                         <a class="btn btn--secondary u-pr-0_5-desk-down u-pl-0_5-desk-down" role="button"
