chore (refs T31116): rename boilerplate route prop.

--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
@@ -110,7 +110,7 @@
                                     linkButton: true
                                 }"
                                 :routes="{
-                                    boilerplateListRoute: Routing.generate('DemosPlan_procedure_boilerplate_list', { procedure: {{ templateVars.table.procedure.ident }} })
+                                    boilerplateEditViewRoute: Routing.generate('DemosPlan_procedure_boilerplate_list', { procedure: {{ templateVars.table.procedure.ident }} })
                                 }"
                                 v-model="currentRecommendation">
                             </dp-editor>
