--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/news_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/news_admin_edit.html.twig
@@ -248,7 +248,7 @@
                         editorId: 'newsText',
                         ref: 'r_text',
                         routes: {
-                            boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedure })
+                            boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedure })
                         },
                         boilerPlate: 'news.notes'
                     },
