--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
@@ -49,7 +49,7 @@
                         linkButton: true,
                         procedureId: templateVars.procedureId,
                         routes: {
-                            boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': templateVars.procedureId })
+                            boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': templateVars.procedureId })
                         }
                     },
                     id: 'r_email_body',
