--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
@@ -44,7 +44,7 @@
                             linkButton: true,
                             required: true,
                             routes: {
-                                boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId|default })
+                                boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId|default })
                             }
                         },
                         id: 'r_email_body',
