--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
@@ -123,7 +123,7 @@
                         procedureId: procedureId,
                         ref: 'r_emailText',
                         routes: {
-                            boilerplateListRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId })
+                            boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId })
                         }
                     },
                     type: 'editor',
