--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_statement_form.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_statement_form.html.twig
@@ -66,7 +66,7 @@
                 >
                     <template v-slot:option="props">
                         <span v-if="props.option.$isLabel">
-                            {% verbatim %}{{ props.option.$groupLabel }}{% endverbatim %}
+                            <strong>{% verbatim %}{{ props.option.$groupLabel }}{% endverbatim %}</strong>
                         </span>
                         <span v-else>
                             {% verbatim %}{{ props.option.title }}{% endverbatim %}
