--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanAssessment/view_statement.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanAssessment/view_statement.html.twig
@@ -1,5 +1,19 @@
 {% extends '@DemosPlanCore/DemosPlanCore/base.html.twig' %}
 
+{# if there are statement votes ("Mitzeichner"), then the option "Schlussmitteilung versenden" plus corresponding hint will be shown #}
+{% set templateVars.sendFinalEmail = true %}
+{% set templateVars.finalEmailOnlyToVoters = false %}
+{% if templateVars.table.statement.feedback == 'snailmail' %}
+  {% set templateVars.table.statement.feedback = "via.post"|trans %}
+  {% if templateVars.table.statement.votes is empty %}
+    {% set templateVars.sendFinalEmail = false %}
+  {% else %}
+    {% set templateVars.finalEmailOnlyToVoters = true %}
+  {% endif %}
+{% elseif templateVars.table.statement.feedback == 'email' %}
+    {% set templateVars.table.statement.feedback = "via.email"|trans %}
+{% endif %}
+
 {% set statement = templateVars.table.statement %}
 {% set procedure = templateVars.table.procedure.id %}
 
