fix(refs T31303): reduce dom elements

--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_statement_form.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_statement_form.html.twig
@@ -65,9 +65,9 @@
                     data-cy="fragmentTopicsTags"
                 >
                     <template v-slot:option="props">
-                        <span v-if="props.option.$isLabel">
-                            <strong>{% verbatim %}{{ props.option.$groupLabel }}{% endverbatim %}</strong>
-                        </span>
+                        <strong v-if="props.option.$isLabel">
+                            {% verbatim %}{{ props.option.$groupLabel }}{% endverbatim %}
+                        </strong>
                         <span v-else>
                             {% verbatim %}{{ props.option.title }}{% endverbatim %}
                         </span>
