--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_list.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_list.html.twig
@@ -23,7 +23,11 @@
         </dp-map-settings-preview>
     {% endif %}
 
-    {{ extensionPointMarkup('showElementsAdminList')|raw }}
+    {% set addonProps = { 'procedureId': procedure } %}
+    <addon-wrapper
+        hook-name="procedure.adminlist.fields"
+        :addon-props="JSON.parse('{{ addonProps|json_encode|e('js', 'utf-8') }}')">
+    </addon-wrapper>
 
     <div class="u-mt-0_75">
         {# Display errors from failed element import #}
