bug(refs: T31401): fix wrong translation in master toeb list
The translation key was simply unknown. Since we already have a translation key to display "Master-TöB-Liste", the fix simply is to use the already existant translation key instead of the old unused one.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/includes/mastertoeblist_pageheader.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/includes/mastertoeblist_pageheader.html.twig
@@ -10,7 +10,7 @@
     {
         current: 'mastertoeblist' == highlighted|default,
         href: path('DemosPlan_user_mastertoeblist'),
-        label: 'publicagency.master',
+        label: 'invitable_institution.master',
         feature: 'area_manage_mastertoeblist'
     },
     {
