chore (refs T30974): change name of variables for (color brand main).

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-assignment.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-assignment.dplan.scss
@@ -21,7 +21,7 @@
 // These are ui tokens  and should be migrated there!!!
 
 // Globals > links
-$default-link-color:                    $dp-color-main !default;
+$default-link-color:                    $dp-color-brand-main-base !default;
 $default-link-color-hover:              $dp-color-highlight !default;
 
 // Globals > background
