--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_callout.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_callout.scss
@@ -29,7 +29,7 @@
                 @include inuit-font-size($dp-token-font-size-brand-hero);
             }
 
-            color: $dp-color-main;
+            color: $dp-color-brand-main-base;
         }
 
         &__subclaim {
