--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
@@ -576,7 +576,7 @@ $map-layer-color-active-hover: $dp-token-color-brand-cta-dark;
                 height: 100%;
                 width: 100%;
 
-                background-color: $dp-color-main;
+                background-color: $dp-color-brand-main-base;
                 cursor: pointer;
                 opacity: .4;
             }
