--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
@@ -44,7 +44,7 @@
         &__reset-btn {
             background-color: transparent;
             border: none;
-            color: $dp-color-main;
+            color: $dp-color-brand-main-base;
             cursor: pointer;
         }
 
