--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
@@ -267,8 +267,8 @@
         $multiselect-checkbox-border-color: #cacece;
         $multiselect-checkbox-bg-color: #fafafa;
 
-        $multiselect-color-selected: $dp-color-main--dark;
-        $multiselect-color-hover: $dp-color-main;
+        $multiselect-color-selected: $dp-color-brand-main-dark-1;
+        $multiselect-color-hover: $dp-color-brand-main-base;
 
         // Checkbox styles for options
         input[type='checkbox'] {
