--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_color.scss
@@ -21,7 +21,7 @@
 // The [main] tokens are the "loudest" brand representation in the color scheme.
 // Use with caution. Currently reserved for header and tabs on public detail page.
 // The value of [main] should pass AAA contrast check with the value of [main-contrast].
-$dp-token-color-brand-main:                     $dp-color-main !default;
+$dp-token-color-brand-main:                     $dp-color-brand-main-base !default;
 $dp-token-color-brand-main-contrast:            $dp-color-white !default;
 
 // Secondary color/background-color pairing.
@@ -33,7 +33,7 @@ $dp-token-color-brand-alt-contrast:             $dp-color-white !default;
 
 // Link color is applied to all links that should be branded... that is, basically, all links.
 // All 3 colors should pass AAA contrast check with $dp-color-white as background.
-$dp-token-color-brand-link:                     $dp-color-main !default;
+$dp-token-color-brand-link:                     $dp-color-brand-main-base !default;
 $dp-token-color-brand-link-hover:               $dp-color-highlight !default;
 $dp-token-color-brand-link-active:              $dp-color-highlight--dark !default;
 $dp-token-color-brand-link-alt:                 $dp-color-neutral-base !default;
@@ -52,20 +52,20 @@ $dp-token-color-brand-cta-contrast:             $dp-color-white !default;
 // The [header] tokens style both the pageheader & main navigation.
 // The value of [header(-<variant>)] should pass AAA contrast check with the value of [header(-<variant>)-contrast].
 // - Default main nav item colors, match fullscreen nav bar background + mobile current item
-$dp-token-color-brand-header:                   $dp-color-main !default;
+$dp-token-color-brand-header:                   $dp-color-brand-main-base !default;
 $dp-token-color-brand-header-contrast:          $dp-color-white !default;
 // - Highlighted state for main nav items, matches pageheader colors
 $dp-token-color-brand-header-alt:               $dp-color-alt !default;
 $dp-token-color-brand-header-alt-contrast:      $dp-color-white !default;
 // - Hover state for main nav items, matches :active state for mobile item
 $dp-token-color-brand-header-active:            $dp-color-neutral-light-3 !default;
-$dp-token-color-brand-header-active-contrast:   $dp-color-main !default;
+$dp-token-color-brand-header-active-contrast:   $dp-color-brand-main-base !default;
 
 // The [nav-alt] tokens control the appearance of branded secondary navigation (project switcher, footer).
-$dp-token-color-brand-nav-alt-link:             $dp-color-main !default;
+$dp-token-color-brand-nav-alt-link:             $dp-color-brand-main-base !default;
 $dp-token-color-brand-nav-alt-link-hover:       $dp-color-highlight !default;
 $dp-token-color-brand-nav-alt-alt:              $dp-color-neutral-dark-1 !default;
-$dp-token-color-brand-nav-alt-bg:               $dp-color-main--light-1 !default;
+$dp-token-color-brand-nav-alt-bg:               $dp-color-brand-main-light-3 !default;
 
 
 // UI colors
