--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-palette.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-palette.dplan.scss
@@ -42,10 +42,10 @@
 // $dp-color-[main|alt|highlight|system][-dark|-dark-1|-light|-light-1|-light-2]
 
 // Main color + its lights & shades
-$dp-color-main--light-1:            #e2e3ec !default;
-$dp-color-main--light:              #9ea3d1 !default;
-$dp-color-main:                     #003064 !default;
-$dp-color-main--dark:               #002146 !default;
+$dp-color-brand-main-light-3:       #e2e3ec !default;
+$dp-color-brand-main-light-2:       #9ea3d1 !default;
+$dp-color-brand-main-base:          #003064 !default;
+$dp-color-brand-main-dark-1:        #002146 !default;
 
 // Secondary color + its lights & shades
 $dp-color-alt--light-1:             #d9f2ff !default;
