--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_trumps-3rd-party-resets.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_trumps-3rd-party-resets.dplan.scss
@@ -60,7 +60,7 @@
     .rateit-selected {
         top: 0;
         padding-bottom: 1px;
-        color: $dp-color-main;
+        color: $dp-color-brand-main-base;
         overflow: hidden;
     }
 
