--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_segmentlist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_segmentlist.scss
@@ -132,7 +132,7 @@ $utility-border-thickness: $dp-border-thickness;
             }
 
             &.is-active {
-                background: $dp-color-main;
+                background: $dp-color-brand-main-base;
                 color: $dp-color-white;
                 border-radius: $dp-token-rounded-medium;
             }
