--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_switcher.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_switcher.scss
@@ -37,7 +37,7 @@
             height: 33px;
             background-color: $dp-color-white;
             border-radius: 20px;
-            color: $dp-color-main;
+            color: $dp-color-brand-main-base;
         }
     }
 }
