--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_wizard.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_wizard.scss
@@ -34,7 +34,7 @@
     }
 
     legend:not(.is-label) {
-        color: $dp-color-main;
+        color: $dp-color-brand-main-base;
         cursor: pointer;
 
         i.caret {
@@ -110,7 +110,7 @@
                 position: absolute;
                 top: 22px;
                 left: 22px;
-                color: $dp-color-main;
+                color: $dp-color-brand-main-base;
             }
 
             .o-wizard__main {
