--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_objects-cardboxes.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_objects-cardboxes.dplan.scss
@@ -45,5 +45,5 @@
 
 @keyframes background-default-brand {
     0% { background-color: $dp-color-white; }
-    100% { background-color: color.adjust($dp-color-brand-main-base, $lightness: 35%); }
+    100% { background-color: $dp-color-brand-main-light-2; }
 }
