feat(refs T31492): Replace ui twig component with vue component
And move deprecated props to toolbarItems where they belong.

--- a/templates/bundles/DemosPlanCoreBundle/UI/form/editor.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/UI/form/editor.html.twig
@@ -1,7 +1,6 @@
 {#
     This is a ui component used via the Twig function call uiComponent('form.editor')
 
-    boilerPlate {String}
     customAttrs {Array}:        Set custom attributes on the outer element container,
                                 that are not a part of the api of DpTiptap.vue.
     fullscreenButton {Boolean}
@@ -13,7 +12,6 @@
     mark {Boolean}              set to true to add a mark-option in editor, default false
     obscure {boolean}           set to true to enable dp-obscure for the editor
     omitCssPrefix {Boolean}:    Set to false will add a css prefix from parameters.yml (public_css_class_prefix), default true
-    procedureId {String}        pass the procedureId
     readonly {Boolean}          set to true to lock the text and display a read only view, default false
     ref {String}                set a ref to interact with the editor from the outer vue component
     required {Boolean}          set to true to mark the editor as required field. Validation may be handled manually. default false
@@ -33,39 +31,27 @@
 {% if linkButton|default is same as true %}
     {% set toolbarItems = toolbarItems|merge({ 'linkButton': true }) %}
 {% endif %}
+{% if mark|default is same as true %}
+    {% set toolbarItems = toolbarItems|merge({ 'mark': true }) %}
+{% endif %}
 {% if insertAndDelete|default is same as true %}
     {% set toolbarItems = toolbarItems|merge({ 'insertAndDelete': true }) %}
 {% endif %}
 {% if obscure|default is same as true %}
     {% set toolbarItems = toolbarItems|merge({ 'obscure': true }) %}
 {% endif %}
+{% if strikethrough|default is same as true %}
+    {% set toolbarItems = toolbarItems|merge({ 'strikethrough': true }) %}
+{% endif %}
 
 <dp-editor
     value="{{ value }}"
     class="{{ 'u-mb'|prefixClass(omitPrefix) }}"
-    {% if boilerPlate|default != '' %}
-        boiler-plate="{{ boilerPlate }}"
-    {% endif %}
     {% if dataCy is defined %}
         data-cy="{{ dataCy }}"
     {% endif %}
-    {% if procedureId|default != '' %}
-        procedure-id="{{ procedureId }}"
-    {% endif %}
     {% if hiddenInput|default != '' %}
         hidden-input="{{ hiddenInput }}"
-    {% endif %}
-    {% if fullscreenButton is defined and fullscreenButton is same as false %}
-        :fullscreen-button="false"
-    {% endif %}
-    {% if listButtons is defined and listButtons is same as false %}
-        :list-buttons="false"
-    {% endif %}
-    {% if linkButton|default is same as true %}
-        link-button
-    {% endif %}
-    {% if mark|default is same as true %}
-        mark
     {% endif %}
     {# Could editor-id be generated entirely inside DpTiptap.vue? #}
     editor-id="{{ editorId|default }}"
@@ -80,10 +66,7 @@
         ref="{{ ref }}"
     {% endif %}
     {% if required|default is same as true %}
-        :required="true"
-    {% endif %}
-    {% if strikethrough|default is same as true %}
-        :strikethrough="true"
+        required
     {% endif %}
     {% if customAttrs|default is iterable and customAttrs|length > 0 %}
         {% for attr in customAttrs %}
